# panel-agent

./: .env.example  Cargo.toml  NOTICE  README.md  setup-agent.sh  update-agent.sh
.github/workflows/: release.yml
.sqlx/: query-00c3f8dbef816155b03792538abfc506a2580550a1f8831ba05fd782362e6b7a.json  query-12bcf9534dacea1a0dc2d3338f4da244b969d5e4c4589fafe6a3847252538270.json  query-1f2ceb2be0d2387d5c8e254dc6e9fcf5af91155fcd73f7ef31b1fd35e4193ed6.json  query-3e28e1e4762466cc65827e2a360ba337e741d3980341c24f5955c3c03533081e.json  query-41064acceb10f24845763eb04486ff5350001288b446958cee795b7c22a66499.json  query-4c0ef88e55334be6c63db2fdebb707fef3d15635740b649e4aefdce73f08b212.json  query-6b23aeb57c196da19bc5922fae3ba851bc1ef6c782425978c1ae9b7c538e3200.json  query-6f9d5e4ac232c5b7692b25114bb69a82cdf365bd132230c9e71356645f7e2d58.json  query-9090aea230f941811868a9c84b32c8d3ce35463e25ce09edb2f654857fb6c635.json  query-94c1a847466d0f3d6e710940729b642f7edd695e6ec47660ec606eb743cd7b91.json  query-99ea67380017be816434150f214c21da98a5e10688c707f6573a892c4fb94461.json  query-a7ec522154154d28ebcf37d939d02397a0b9462183a04664943a183dde98b13b.json  query-b48607b49c20e23f376065a682ab2b09e209f3d286b71130b3f2ece50c5fb78f.json  query-b90f0087cb54a980e483949206cf8a20a60cdddf3517b5b60e27cd9821d02f3e.json  query-cb1c7d7a0e9bcda713409a72b85401765b8dab095e4f94f3e4c44156338a3a4a.json  query-d98c209b07244d0e9ff0be3653026ef23efb0b13214f6e5c7f0423f79142bb6b.json  query-db566c5dfda4e8eafec318a87ee33930d895dddb736c2e5a6e7993cee488d3e7.json  query-e0ece2be8df9040927c3ddaaf9f410f8f4f2141eed2087e6f70ef02f9dcce006.json  query-e6303fa3c8c58b4ba15abe6147704834ddf2b190948d7671c85bd383f49bfbb5.json  query-ff5b6781f0fd181c7a6acc923513dc98af2d4233da678195c197658a8b0b0109.json
migrations/: 001_init.sql  002_sync_cursor.sql  003_nginx_configs.sql  004_nftables_state.sql  005_nftables_output.sql  006_fix_uuid_default.sql  007_container_deployments.sql  008_fix_container_deployments_uuid_default.sql
src/: cert.rs  config.rs  conflict.rs  error.rs  main.rs  nginx.rs  state.rs  ws_client.rs
src/audit/: mod.rs
src/auth/: mod.rs
src/handlers/: containers.rs  metrics.rs  mod.rs  nftables.rs  nginx_cmd.rs  system.rs  wireguard.rs
src/metrics/: mod.rs
src/nftables/: divergence.rs  mod.rs
src/podman/: mod.rs
src/sync/: mod.rs
src/update/: fallback.rs  mod.rs
