[package]
name = "lynx-agent"
version = "1.2.5"
edition = "2021"

[[bin]]
name = "lynx-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# database
sqlx = { workspace = true }

# crypto — command authorization & audit log
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
base64ct = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }

# HTTP client (audit log sync to dashboard)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
url = { workspace = true }

# WebSocket client (agent → dashboard persistent connection)
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# time
chrono = { workspace = true }
uuid = { workspace = true }

# system interaction
nix = { version = "0.31", features = ["process", "signal", "fs"] }

lynx-compose = { path = "../translators/compose" }
