[package]
name = "lynx-agent"
version = "1.3.1"
edition = "2021"

[[bin]]
name = "lynx-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros", "ws"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header", "limit"] }

# database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "ipnetwork", "macros"] }

# crypto — command authorization & audit log
ed25519-dalek = { version = "2", features = ["pkcs8", "zeroize"] }
sha2 = "0.11"
hex = "0.4"
base64ct = { version = "1", features = ["alloc"] }
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
rand = "0.10"
rcgen = { version = "0.14", features = ["x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"

# HTTP client (audit log sync to dashboard)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
url = "2"

# WebSocket client (agent → dashboard persistent connection)
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

# system interaction
nix = { version = "0.31", features = ["process", "signal", "fs"] }

podup = { git = "https://github.com/Glyndor/podup", tag = "v0.5.6" }

[workspace]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
